--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,5 @@
 
 ul {
   list-style-image: url("https://sadgrl.online/images/lyts/not-mine/hearth_rosa.gif");
-  margin-left: 300px;
+  padding-left: 300px;
 }
