--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   margin: 0 auto;
-  background-color:rgb(251, 203, 230);
+  background-image: url("https://sadgrl.online/images/lyts/not-mine/notebook-collage.png");
   border-radius: 20px;
   height: 800px;
   width: 800px;
