--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   border-radius: 20px;
   height: 800px;
   width: 800px;
-border-image: url(lace.png);
+border-image: url(lace.png) 30 round;
 }
 
 ul {
