--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   margin: 0 auto;
-  background-image: url(lace.png);
+  background-color: blue;
   border-radius: 20px;
   height: 800px;
   width: 800px;
