--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,13 @@
   width: 500px;
 
 }
+img {
+ 
+  border-image: url("lace.png") 30 round;
+  border-radius: 2px;
+  height: 500px;
+  width: 250;          
+}
 
 ul {
   list-style: none;
