--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   border-radius: 20px;
   height: 500px;
   width: 500px;
-  border-image: url("lace.png") 30 round;
+ border-image: url(lace.png) 25% repeat;;
 }
 
 
