--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .App {
   text-align: center;
   margin: 0 auto;
-  background-color: blue;
+  background-image: url("lace.png");
   border-radius: 20px;
   height: 500px;
   width: 500px;
- border-image: url("lace.png");
+
 }
 
 
