--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,14 @@
   text-align: center;
   margin-top: 100px;
   
- border-image: url("lace.png") 5 fill round;
+ border-image: url("http://dl5.glitter-graphics.net/pub/591/591115t8qpmw0bs5.gif") 5 fill round;
   background-attachment: fixed;
   background-repeat: repeat;
   
 
   border-radius: 20px;
-  height: 500px;
-  width: 500px;
+  height: 700px;
+  width: 700px;
 
 }
 
