--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
   margin-top: 100px;
-  
- border-image: url("http://dl5.glitter-graphics.net/pub/591/591115t8qpmw0bs5.gif") 5 fill round;
+  background-color: white;
+ border-image: url("http://dl4.glitter-graphics.net/pub/988/988834hh9o6vxkbm.gif") 5 fill round;
 
   border-radius: 20px;
   height: 700px;
