--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,14 @@
 .App {
   text-align: center;
   margin-top: 100px;
-  background-color: white;
+  
  border-image: url("hearts.png") 5 fill round;
- background-attachment: fixed;
- background-repeat: repeat;
- height: 700px;
+  background-attachment: fixed;
+  background-repeat: repeat;
+  
+
+  border-radius: 20px;
+  height: 700px;
   width: 700px;
 
 }
