--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin-top: 100px;
   
  border-image: url("border.png") 5 fill round;
-  background-color: white;
+  background-color: pink;
 
    border-radius: 20px;
   height: 700px;
