--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   margin-top: 100px;
   
- border-image: url("border.png") 5 fill round;
+ border-image: url("border.png") 5  round;
   background-color: pink;
 
    border-radius: 20px;
