--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   margin-top: 100px;
   
- border-image: url("border.png");
+ border-image: url("border.png") 33%;
   background-color: pink;
 
    border-radius: 20px;
