--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,11 @@
 .App {
   text-align: center;
-  margin-top: 100px;
-  
- border-image: url("border.png") 5 round;
-  background-color: pink;
-border-image: repeat;
-   border-radius: 20px;
-  height: 700px;
-  width: 700px;
-
+  margin: 0 auto;
+  background-color: blue;
+  border-radius: 20px;
+  height: 500px;
+  width: 500px;
+ border-image: url("lace.png") 25% repeat;
 }
 
 
