--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   border-radius: 20px;
   height: 500px;
   width: 500px;
- border-image: url("http://dl4.glitter-graphics.net/pub/988/988834hh9o6vxkbm.gif") 5 fill round;
+ border-image: url("http://dl4.glitter-graphics.net/pub/988/988834hh9o6vxkbm.gif") 30 round;
 
 
 }
