--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
 .App {
-  text-align: center;
-  margin: 0 auto;
-  background-color: white;
-  border-radius: 20px;
-  height: 500px;
-  width: 500px;
- border-image: url("border.png") 5  round;
 
-border-image-repeat: no-repeat;
+
+ padding: 5px;
+ border: 150px;
+  height: 60%;
+  width: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+ border-image: url(border.png) 33% round;
+
+
 }
 
 
