--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   width: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
- border-image: url(border.png) 33% round;
+ border-image: url("border.png") 33% round;
 
 
 }
