--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 .App {
+  text-align: center;
+  margin: 0 auto;
+  background-color: white;
 
-
- padding: 5px;
- border: 150px;
-  height: 60%;
-  width: 50%;
-  position: absolute;
-  transform: translate(-50%, -50%);
- border-image: url("border.png") 33% round;
-
-
+  height: 700px;
+  width: 700px;
+ 
+ border-image-source: url("border.png") ;
+border-image-slice:80 ;
+border:40px solid ;
+border-image-repeat: round;
 }
 
 
