--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   height: 700px;
   width: 700px;
  
- border-image-source: url("border.png") ;
+ border-image-source: url("http://dl5.glitter-graphics.net/pub/591/591115t8qpmw0bs5.gi") ;
 border-image-slice:80 ;
 border:40px solid ;
 border-image-repeat: round;
