--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   height: 700px;
   width: 700px;
  
- border-image-source: url("http: //dl 5glitter graphics .net/pub/ 591px / 591115t 8qpmw 0bs 5gif") ;
+ border-image-source: url("border.png") ;
 border-image-slice:80 ;
 border:40px solid ;
 border-image-repeat: round;
