--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
   height: 600px;
   width: 600px;
  
- border-image-source: url("candy.png") ;
-border-image-slice:100 ;
+ border-image-source: url("doggy.png") ;
+border-image-slice:80 ;
 border:40px solid ;
 border-image-repeat: round;
 }
