--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   margin: 0 auto;
-  background-color: white;
+  background-color: rgb(253, 251, 155);
 
   height: 600px;
   width: 600px;
