--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   margin: 0 auto;
   background-color: rgb(250, 199, 236);
-
+border-radius: 20px;
   height: 600px;
   width: 600px;
  
