--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 border-radius: 20px;
   height: 600px;
   width: 600px;
- 
+  padding:10px;
  border-image-source: url("pixel.png") ;
 border-image-slice:80 ;
 border:40px solid ;
