added another border

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ border-radius: 20px;
   height: 600px;
   width: 600px;
   padding:10px;
- border-image-source: url("roses.gif") ;
+ border-image-source: url("cute.png") ;
 border-image-slice:80 ;
 border:40px solid ;
 border-image-repeat: round;
