--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,10 @@
   margin-top: 100px;
   background-color: rgb(250, 199, 236);
 border-radius: 20px;
-  height: 100px;
-  width: 100px;
+  height: 600px;
+  width: 600px;
   padding:10px;
- border-image-source: url("cute.png") ;
+ border-image-source: url("bow.png") ;
 border-image-slice:80 ;
 border:40px solid ;
 border-image-repeat: round;
