--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
   margin-top: 100px;
-  background-color: rgb(250, 199, 236);
+  background-color: white;
+  margin-left: 300px;
 border-radius: 20px;
   height: 600px;
   width: 600px;
