--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ border-radius: 20px;
   height: 600px;
   width: 600px;
   padding:10px;
- border-image-source: url("bubbles.png") ;
+ border-image-source: url("strawberry.png") ;
 border-image-slice:80 ;
 border:70px solid ;
 border-image-repeat: round;
