--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ border-radius: 20px;
   height: 600px;
   width: 600px;
   padding:10px;
-  background-image: url("blue.png");
+  background-image: url("royal.png");
   padding-top: 40px;
   width: 690px;
   height:500px;
