--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .App {
   text-align: center;
-  
-  background-color: white;
-  margin-left: 300px;
+   background-color: rgb(241, 236, 236);
+ 
 border-radius: 20px;
   height: 800px;
   width: 800px;
