--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 .App {
   text-align: center;
-   background-color: rgb(241, 236, 236);
+  
+ background-color: white;
  
 border-radius: 20px;
   height: 800px;
   width: 800px;
   padding:10px;
-  background-image: url("macroons.png");
+  background-image: url("last.png");
   padding-top: 40px;
  
   background-repeat: no-repeat;
