--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ border-radius: 20px;
   height: 800px;
   width: 800px;
   padding:10px;
-  background-image: url("flowers.png");
+  background-image: url("flower.png");
   padding-top: 40px;
  
   background-repeat: no-repeat;
