--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+ text-align: center;
+
+
   
  background-color: white;
  
@@ -7,7 +9,7 @@ border-radius: 20px;
   height: 800px;
   width: 800px;
   padding:10px;
-  background-image: url("flower.png");
+  background-image: url("last.png");
   padding-top: 40px;
  
   background-repeat: no-repeat;
